<resources>
    <string name="app_name">FiveInRow</string>
    <string name="game_name">五子棋</string>
    <string name="about">about us:FoxLuo\nemail:1061297065@qq.com</string>
    <string name="save">存档</string>
    <string name="_save">保存</string>
    <string name="setting">设置</string>
    <string name="save_list">存档列表</string>
    <string name="new_game">新游戏</string>
    <string name="sure">确认</string>
    <string name="_cancel">取消</string>
    <string name="cancel">悔棋</string>
    <string name="make_sure">落子无悔</string>
    <string name="continue_game">继续游戏</string>
    <string name="game_over">游戏结束</string>
    <string name="delete">删除</string>
    <string name="save_edit">存档标题</string>
    <string name="prompt">提示</string>
    <string name="board_padding">棋盘边距</string>
    <string name="border_color">线框颜色</string>
    <string name="border_width">线框粗细</string>
    <string name="pvp">玩家对弈</string>
    <string name="pve">AI电脑</string>
    <string name="easy_mode">AI难度</string>
    <string name="choose_easy_mode">选择AI难度</string>
    <string name="easy_0">弱智</string>
    <string name="easy_1">有点傻</string>
    <string name="easy_2">正常</string>
    <string name="easy_3">会玩</string>
</resources>