<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C9D1C6"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@raw/font"
        android:text="请点击新游戏开始"
        android:textColor="@drawable/color_game_text"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/setting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center_v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/setting"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="#A4AF9F"
        android:fontFamily="@raw/font"
        android:gravity="center"
        android:paddingVertical="6dp"
        android:text="@string/setting"
        android:textColor="@drawable/color_game_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/game_view"
        app:layout_constraintEnd_toStartOf="@id/center_v"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/cache"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="#A4AF9F"
        android:fontFamily="@raw/font"
        android:gravity="center"
        android:paddingHorizontal="16dp"
        android:paddingVertical="6dp"
        android:text="@string/save_list"
        android:textColor="@drawable/color_game_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/game_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/center_v"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/save"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="#A4AF9F"
        android:enabled="false"
        android:fontFamily="@raw/font"
        android:gravity="center"
        android:paddingVertical="6dp"
        android:text="@string/save"
        android:textColor="@drawable/color_game_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/game_view"
        app:layout_constraintEnd_toStartOf="@id/center_v"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/reset"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="#A4AF9F"
        android:fontFamily="@raw/font"
        android:gravity="center"
        android:paddingHorizontal="16dp"
        android:paddingVertical="6dp"
        android:text="@string/new_game"
        android:textColor="@drawable/color_game_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/game_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/center_v"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <com.foxluo.fiveinrow.FiveInRowGameView
        android:id="@+id/game_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="center"
        android:background="@mipmap/game_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/game_view">

        <CheckBox
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@raw/font"
            android:text="@string/make_sure"
            android:textColor="@drawable/color_game_text" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@raw/font"
            android:gravity="center"
            android:enabled="false"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:textColor="@drawable/color_game_text" />

        <TextView
            android:id="@+id/sure"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@raw/font"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/sure"
            android:textColor="@drawable/color_game_text"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/about"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/game_view" />
</androidx.constraintlayout.widget.ConstraintLayout>